fix protein logo on mobile view

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -188,4 +188,8 @@
   .text {
     font-size: 1.4rem;
   }
+
+  .proteinLogo {
+    width: 4rem;
+  }
 }
